Switch to single line address
