# openapi/index.yaml
@@ -276,23 +276,10 @@ definitions:
   Address:
     type: object
     required:
-      - street
-      - zipCode
-      - city
-      - district
+      - full_address
     properties:
-      street:
+      full_address:
         type: string
-      zipCode:
-        type: string
-        minLength: 5
-        maxLength: 5
-      city:
-        type: string
-      district:
-        type: string
-        minLength: 2
-        maxLength: 2
       latitude:
         type: number
       longitude:
